0x00. AirBnB clone - The console

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,2 @@
-# This file lists all contributors to the repository.
-
-Tonny Mapanga
-Pritchard Ncube
+Pritchad25 <pricts29@gmail.com>
+TonnyMpho <tonnympho1@gmail.com>
